[package]
name = "aoc12"
version = "0.1.0"
authors = ["Finn Günther <finn.guenther@viperdev.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = {version = "0.15.1", features = ["serde", "specs-derive"]}
specs-derive = "0.4.0"
