[package]
name = "aoc19"
version = "0.1.0"
authors = ["Finn Günther <finn.guenther@viperdev.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode={path="../intcode"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

